--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,15 @@
 
+{
+  "editor.formatOnSave": true,
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": true,
+  "python.linting.flake8Enabled": true,
+  "python.formatting.provider": "black",
+  "editor.defaultFormatter": null,
+  "python.linting.flake8Args": [
+    "--max-line-length=100"
+  ],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.python"
+  }
+}
